VPC-Peering/cloud-formation-template.yml
#
# Copyright 2021 Jaroslav Chmurny
#
# This file is part of AWS Sandbox.
#
# AWS Sandbox is free software developed for educational purposes. It
# is licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

AWSTemplateFormatVersion: 2010-09-09
Description: |
  Demo with 2 custom VPCs, both in the same region and the same account. VPC peering
  connection between the two VPCs is established.

Parameters:
  VPCOneCIDRParam:
    Description: CIDR block for the first of the two VPCs
    Type: String
    Default: 10.0.0.0/16

  VPCTwoCIDRParam:
    Description: CIDR block for the second of the two VPCs
    Type: String
    Default: 10.1.0.0/16

  EnableVPCFlowLogsParam:
    Description: Specifies whether VPC flow logs are to be configured for both VPCs
    Type: String
    AllowedValues:
      - "Yes"
      - "No"
    Default: "Yes"

Mappings:
  AMIMapping:
    eu-central-1:
      HVM64: ami-0453cb7b5f2b7fca2
    eu-west-1:
      HVM64: ami-02b4e72b17337d6c1
    eu-west-2:
      HVM64: ami-0d26eb3972b7f8c96

Conditions:
  EnableVPCFlowLogs: !Equals ["Yes", !Ref EnableVPCFlowLogsParam]

Resources:
  VPCOne:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !Ref VPCOneCIDRParam
      Tags:
        - Key: Name
          Value: VPC-One

  InternetGatewayOne:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachmentOne:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPCOne
      InternetGatewayId: !Ref InternetGatewayOne

  PublicSubnetVPCOne:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCOne
      CidrBlock: !Select [0, !Cidr [!Ref VPCOneCIDRParam, 1, 8]]
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref "AWS::Region"

  RouteTableOne:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCOne

  InternetGatewayRouteOne:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOne
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayOne

  SubnetRouteTableAssociationOne:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTableOne
      SubnetId: !Ref PublicSubnetVPCOne

  SecurityGroupOne:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound TCP traffic on port EC2 from the load balancer
      VpcId: !Ref VPCOne
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VPCTwoCIDRParam

  EC2InstanceOne:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref "AWS::Region"
      SubnetId: !Ref PublicSubnetVPCOne
      ImageId: !FindInMap [AMIMapping, !Ref "AWS::Region", HVM64]
      InstanceType: t2.nano
      SecurityGroupIds:
        - !Ref SecurityGroupOne
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install nc -y
      Tags:
        - Key: Name
          Value: EC2-One

  VPCTwo:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !Ref VPCTwoCIDRParam
      Tags:
        - Key: Name
          Value: VPC-Two

  InternetGatewayTwo:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachmentTwo:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPCTwo
      InternetGatewayId: !Ref InternetGatewayTwo

  PublicSubnetVPCTwo:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCTwo
      CidrBlock: !Select [0, !Cidr [!Ref VPCTwoCIDRParam, 1, 8]]
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref "AWS::Region"

  RouteTableTwo:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCTwo

  InternetGatewayRouteTwo:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableTwo
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayTwo

  SubnetRouteTableAssociationTwo:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTableTwo
      SubnetId: !Ref PublicSubnetVPCTwo

  SecurityGroupTwo:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound TCP traffic on port EC2 from the load balancer
      VpcId: !Ref VPCTwo
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref VPCOneCIDRParam
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VPCOneCIDRParam

  EC2InstanceTwo:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref "AWS::Region"
      SubnetId: !Ref PublicSubnetVPCTwo
      ImageId: !FindInMap [AMIMapping, !Ref "AWS::Region", HVM64]
      InstanceType: t2.nano
      SecurityGroupIds:
        - !Ref SecurityGroupTwo
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install nc -y
      Tags:
        - Key: Name
          Value: EC2-Two

  VPCPeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      VpcId: !Ref VPCOne
      PeerOwnerId: !Ref "AWS::AccountId"
      PeerRegion: !Ref "AWS::Region"
      PeerVpcId: !Ref VPCTwo

  VPCPeeringConnectionRouteOne:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOne
      DestinationCidrBlock: !Ref VPCTwoCIDRParam
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  VPCPeeringConnectionRouteTwo:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableTwo
      DestinationCidrBlock: !Ref VPCOneCIDRParam
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  VPCFLowLogLogGroupOne:
    Type: AWS::Logs::LogGroup
    Condition: EnableVPCFlowLogs
    Properties:
      LogGroupName: !Sub "${AWS::StackName}-VPCFLowLogOne"
      RetentionInDays: 3

  VPCFLowLogLogGroupTwo:
    Type: AWS::Logs::LogGroup
    Condition: EnableVPCFlowLogs
    Properties:
      LogGroupName: !Sub "${AWS::StackName}-VPCFLowLogTwo"
      RetentionInDays: 3

  LogWriterRoleOne:
    Type: AWS::IAM::Role
    Condition: EnableVPCFlowLogs
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: vpc-flow-logs.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: LogWritePermission
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                Resource: !GetAtt VPCFLowLogLogGroupOne.Arn

  LogWriterRoleTwo:
    Type: AWS::IAM::Role
    Condition: EnableVPCFlowLogs
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: vpc-flow-logs.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: LogWritePermission
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                Resource: !GetAtt VPCFLowLogLogGroupTwo.Arn

  VPCFLowLogOne:
    Type: AWS::EC2::FlowLog
    Condition: EnableVPCFlowLogs
    Properties:
      DeliverLogsPermissionArn: !GetAtt LogWriterRoleOne.Arn
      LogDestination: !GetAtt VPCFLowLogLogGroupOne.Arn
      LogDestinationType: cloud-watch-logs
      ResourceId: !Ref VPCOne
      ResourceType: VPC
      TrafficType: ALL

  VPCFLowLogTwo:
    Type: AWS::EC2::FlowLog
    Condition: EnableVPCFlowLogs
    Properties:
      DeliverLogsPermissionArn: !GetAtt LogWriterRoleTwo.Arn
      LogDestination: !GetAtt VPCFLowLogLogGroupTwo.Arn
      LogDestinationType: cloud-watch-logs
      ResourceId: !Ref VPCTwo
      ResourceType: VPC
      TrafficType: ALL
